# Photocrowd-TT

./: .gitignore  README.rst  local.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
docker/: Dockerfile  entrypoint  start
docs/: conf.py  index.rst  leaderboard.rst  make.bat
leaderboard/: admin.py  filters.py  models.py  pagination.py  services.py  views.py
leaderboard/apis/: rest_api.py
leaderboard/management/commands/: import_user_submissions.py
leaderboard/migrations/: 0001_initial.py
leaderboard/tests/: factories.py  test_models.py  test_user_service.py
photocrowd_tech_test/: conftest.py
photocrowd_tech_test/static/css/: bootstrap.min.css
photocrowd_tech_test/templates/: home.html  leaderboard.html
photocrowd_tech_test/templates/abstracts/: base.html  card.html  datatable.html
photocrowd_tech_test/templates/partials/: about_card.html  about_leaderboard_card.html  leaderboard.html  navbar.html
resources/: scores.json
